--- a/about.css
+++ b/about.css
@@ -1,33 +1,118 @@
-/* unvisited link */
-	a:link {
-	background-color:  white;
-	  color: black;
-	}
+/* /* unvisited link */ */
+	/* a:link { */
+	/* background-color:  white; */
+	  /* color: black; */
+	/* } */
 
-	/* visited link */
-	a:visited {
-	  color: hotpink;
-	}
+	/* /* visited link */ */
+	/* a:visited { */
+	  /* color: hotpink; */
+	/* } */
 
-	/* mouse over link */
-	a:hover {
-	  color: white;
-	 font-size:30px;
+	/* /* mouse over link */ */
+	/* a:hover { */
+	  /* color: white; */
+	 /* font-size:30px; */
 	
-	}
+	/* } */
 
-	a:active {
-	 color: blue;
-	} 
+	/* a:active { */
+	 /* color: blue; */
+	/* }  */
 	
 
 	
-	.link a:hover{
-	background-color:#6892b4 ;
-	width:10%;
+	/* .link a:hover{ */
+	/* background-color:#6892b4 ; */
+	/* width:10%; */
 
-	}
+	/* } */
 	
+	
+
+body{
+	
+	 overflow-x: hidden;
+}
+	
+	
+.header {
+	background-image: url('bannercloud.jpg');
+	
+	
+	overflow: hidden;
+	background-color: rgba(255,255,255, .79);
+	padding: 30px 10px;
+	
+}
+	
+.header a, p {
+	float: left;
+	color:rgba(200,233,130, 1);
+	text-align: center;
+	padding: 12px;
+	text-decoration: none;
+	font-size: 25px;
+	line-height: 30px;
+	border-radius: 30px;
+	
+}
+	
+.header p.logo {
+	font-size: 12px;
+	font-weight: bold;
+}
+
+
+.header a:active {
+	background-color: rgba(200,233,130, 0);
+	color: white;
+	line-height: 40px;
+}
+
+.header a:hover {
+	background-color: rgba(200,233,130, .5);
+	color: white;
+	line-height: 40px;
+}
+
+.header a.active {
+	background-color: black;
+	color: white;
+}
+
+.header-right {
+	float: right;
+}
+
+
+.center{
+	text-align:center;
+	font-size:40px;
+	color: #283239;
+
+}
+
+body{
+	
+	background-image: url("stars.gif");
+	background-size:100%;
+    /* background-repeat: repeat; */
+    background-attachment: scroll;
+    height:100%;
+    width:100%;
+	
+}
+#welcome{
+	background-color: rgba(255, 255, 255, .7);
+	margin:50px;
+}
+
+.header img{
+	padding-right:5px;
+	width: 20px;
+
+}
 	
 	/* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
@@ -51,27 +136,38 @@
   flex: 33.33%;
   padding: 5px;
 }
-.child{
-	padding: 80px;
-	background-color:  rgba(0,0,0,0.2)   ;
-	border-radius: 1000px;
+/* .child{ */
+	/* padding: 80px; */
+	/* background-color:  rgba(0,0,0,0.2)   ; */
+	/* border-radius: 1000px; */
+/* } */
+
+/* .teen{ */
+	/* padding: 80px; */
+	/* background-color: rgba(0,0,0,0.6)  ; */
+	/* border-radius: 1000px; */
+/* } */
+
+.collegehood, .teen, .child{
+	padding: 50px 20px 400px;
+	background-color: rgba(160,0,144,0.2) ;
+	border-radius: 300px;
+	margin:20px;
+	
 }
 
-.teen{
-	padding: 80px;
-	background-color: rgba(0,0,0,0.2)  ;
-	border-radius: 1000px;
+
+body{
+	background-image: url("galaxy.gif");
+	
 }
 
-.collegehood{
-	padding: 80px;
-	background-color: rgba(0,0,0,0.2) ;
-	border-radius: 1000px;
-}
+
+
 
 .head{
 	
-	background-color: rgba(0,0,0,0.2);
+	background-image: url("galaxy.gif");
 	padding: 20px;
 	margin: 10px;
 	border-radius: 200px;
@@ -100,5 +196,11 @@
 	 width: 50px;
 	
 		
+		
+	}
+	
+	a{
+		
+		color:white;
 		
 	}
