--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ body{
 	
 }
 #welcome{
-	background-color: rgba(255, 255, 255, .7);
+/* 	background-color: rgba(255, 255, 255, .7); */
 	margin:50px;
 }
 
