--- a/index.css
+++ b/index.css
@@ -79,8 +79,8 @@ body{
 }
 
 .container {
-		background-color: rgba(200,100,100,0.3);
-		
+/* 		background-color: rgba(200,100,100,0.3);
+		 */
         display: flex;
         align-items: center;
         justify-content: center
