--- a/OrderForm/index.css
+++ b/OrderForm/index.css
@@ -1,6 +1,6 @@
 body{
-	/* background-image: url("promo_video.gif"); */
-    background-size: cover;
+	background-image: url("promo_video.gif");
+    	background-size: cover;
 	background-repeat: no-repeat;
 	font-family:Arial;
 	background-color: rgba(242, 197, 157);
